--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Font Awesome CDN (Free) -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -96,11 +96,13 @@
             <div class="direct-messages">
               <h5 class="direct-messages-title">Direct Messages</h5>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image1.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image1.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Bessie Cooper</p>
                   <p class="message">Sure!See you soon!</p>
@@ -111,11 +113,13 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image2.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image2.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Arlene McCoy</p>
                   <p class="message">Sure!See you soon!</p>
@@ -126,11 +130,13 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image3.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image3.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Jane Cooperr</p>
                   <p class="message">Sure!See you soon!</p>
@@ -141,11 +147,13 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image4.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image4.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Swify Project</p>
                   <p class="message">Sure!See you soon!</p>
@@ -156,11 +164,13 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image5.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image5.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Development</p>
                   <p class="message">Sure!See you soon!</p>
@@ -171,11 +181,13 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image6.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image6.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Kristin Watson</p>
                   <p class="message">Sure!See you soon!</p>
@@ -186,11 +198,13 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image7.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image7.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Kathryn Murphy</p>
                   <p class="message">Sure!See you soon!</p>
@@ -201,26 +215,30 @@
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image8.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image8.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Jacob Jones</p>
                   <p class="message">Sure!See you soon!</p>
                 </div>
                 <div class="status">
-                  <p class="status-time">7min ago</p>
+                  <p class="status-time">Last weeks</p>
                   <p>3</p>
                 </div>
               </div>
               <div class="friend-message">
-                <img
-                  src="image/uifaces-human-image9.jpg"
-                  alt=""
-                  class="friend-img"
-                />
+                <div class="friend-status">
+                  <img
+                    src="image/uifaces-human-image9.jpg"
+                    alt=""
+                    class="friend-img"
+                  />
+                </div>
                 <div class="friend-desc">
                   <p class="friend-name">Join Doe</p>
                   <p class="message">Sure!See you soon!</p>
@@ -235,13 +253,89 @@
           <div class="chat-content-box">
             <div class="infomation">
               <div class="infomation-friend">
-                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <div class="status">
+                  <img src="image/uifaces-human-image1.jpg" alt="" />
+                </div>
                 <p class="friend-name">Bessie Cooper</p>
               </div>
               <div class="infomation-action">
                 <i class="fa-solid fa-phone"></i>
                 <i class="fa fa-search"></i>
                 <i class="fa-solid fa-ellipsis"></i>
+              </div>
+            </div>
+            <div class="chat-history">
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-friend">
+                <img src="image/uifaces-human-image1.jpg" alt="" />
+                <p class="mess-desc">Sure!See you soon?</p>
+              </div>
+              <div class="mess-of-me">
+                <p class="mess-desc-me">Get in touch with our agents!</p>
               </div>
             </div>
             <div class="type-message">
