update chat history content css

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               </div>
               <div class="mess-of-friend">
                 <img src="image/uifaces-human-image1.jpg" alt="" />
-                <p class="mess-desc">Sure!See you soon?</p>
+                <p class="mess-desc">Sure!See you soon? you can buscu? you can buscu? you can buscu?</p>
               </div>
               <div class="mess-of-friend">
                 <img src="image/uifaces-human-image1.jpg" alt="" />
@@ -328,7 +328,7 @@
               </div>
               <div class="mess-of-friend">
                 <img src="image/uifaces-human-image1.jpg" alt="" />
-                <p class="mess-desc">Sure!See you soon?</p>
+                <p class="mess-desc"> you can buscu?</p>
               </div>
               <div class="mess-of-friend">
                 <img src="image/uifaces-human-image1.jpg" alt="" />
